out/production/My Development Org/objects/APEX_Customer__c.object
<CustomObject>
    <description>information related to the customers</description>
    <fields>
        <fullName>APEX_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APEX_Customer_Description__c</fullName>
        <label>Customer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APEX_Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APEX_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APEX_Customer_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TestValidator</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(APEX_Customer_Description__c) &lt; 10</errorConditionFormula>
        <errorDisplayField>APEX_Customer_Description__c</errorDisplayField>
        <errorMessage>Description is too short</errorMessage>
    </validationRules>
</CustomObject>